--- a/index.html
+++ b/index.html
@@ -9,22 +9,16 @@
 </head>
 <body>
     <header>
-        <h1>Hello, I'm [Your Name] 👋</h1>
+        <h1>Hello, I'm Bhoomi Deshpande 👋</h1>
         <p>I am passionate about technology and problem-solving. Here's a glimpse of my work:</p>
     </header>
 
     <section>
-        <h2>🛠️ Projects</h2>
-        <ul>
-            <li><strong>Project 1</strong>: A short description of your project1.</li>
-            <li><strong>Project 2</strong>: A short description of another project2.</li>
-        </ul>
-
+        
         <h2>🚀 Skills</h2>
         <ul>
-            <li>C++, Python, JavaScript</li>
+            <li>C++, Python</li>
             <li>Data Structures and Algorithms</li>
-            <li>Web Development (React.js, Node.js)</li>
         </ul>
 
         <h2>🌐 Find Me Online</h2>
@@ -36,25 +30,25 @@
         <h2>Portfolio Topic</h2>
         <dl>
             <dt>Course Name</dt>
-            <dd>Algorithmic Problem Solving</dd>
+            <dd>Design and Analysis of Algorithms</dd>
 
             <dt>Course Code</dt>
-            <dd>Course Code Placeholder</dd>
+            <dd>24ECSC205</dd>
 
             <dt>Name</dt>
-            <dd>Your Name</dd>
+            <dd>Bhoomi Deshpande</dd>
 
             <dt>SRN</dt>
-            <dd>Your SRN</dd>
+            <dd>01FE23BCS145</dd>
 
             <dt>Course Instructor</dt>
-            <dd>Instructor Name Placeholder</dd>
+            <dd>Mrs Arundati</dd>
 
             <dt>University</dt>
-            <dd>Your University Name</dd>
+            <dd>KLE Technological University</dd>
 
             <dt>Portfolio Topic/Domain</dt>
-            <dd>Google</dd>
+            <dd>Optimizing Agriculture with Renewable Energy Resources</dd>
         </dl>
 
         <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
