--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
         </ul>
 
-        <h2>Portfolio Topic</h2>
+        <h2>Portfolio </h2>
         <dl>
             <dt>Course Name</dt>
             <dd>Design and Analysis of Algorithms</dd>
