--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
         <button class="about-button" onclick="location.href='jhooti.html'">About Course</button>
         <button class="about-project-button" onclick="location.href='daa1.html'">About the Project</button>
+        <button class="course-reflections-button" onclick="location.href='daa2.html'">Course Reflections</button>
+        <button class="business-cases-button" onclick="location.href='daa3.html'">Business cases</button>
 
         <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
     </section>
