--- a/daa1.html
+++ b/daa1.html
@@ -10,28 +10,46 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #f8f6fc;
+            color: #4c4a57;
         }
 
         header {
-            background-color: #0056b3;
+            background: linear-gradient(90deg, #6a0dad, #8a2be2);
             color: white;
-            padding: 1rem 0;
+            padding: 1.5rem 0;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin: 0;
         }
 
         .container {
             max-width: 900px;
             margin: 2rem auto;
-            padding: 0 1rem;
+            padding: 1.5rem;
             background: white;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
         }
 
-        h1, h2 {
-            color: #0056b3;
+        h1, h2, h3 {
+            color: #6a0dad;
+        }
+
+        h1 {
+            font-size: 2.25rem;
+        }
+
+        h2 {
+            font-size: 1.8rem;
+        }
+
+        h3 {
+            font-size: 1.5rem;
         }
 
         ul {
@@ -43,12 +61,44 @@
             margin: 0.5rem 0;
         }
 
+        p {
+            font-size: 1.1rem;
+        }
+
         footer {
             text-align: center;
             padding: 1rem 0;
             margin-top: 2rem;
-            background-color: #0056b3;
+            background: linear-gradient(90deg, #8a2be2, #6a0dad);
             color: white;
+            font-size: 0.9rem;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        /* Button Styles */
+        .container p:last-child {
+            margin-top: 2rem;
+            text-align: center;
+        }
+
+        .cta-button {
+            display: inline-block;
+            margin-top: 1rem;
+            background-color: #6a0dad;
+            color: white;
+            text-decoration: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 8px;
+            font-size: 1rem;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+
+        .cta-button:hover {
+            background-color: #8a2be2;
         }
     </style>
 </head>
@@ -102,6 +152,10 @@
 
         <h3>Smart Cities Run on Algorithms!</h3>
         <p>From traffic control to energy optimization, algorithms power every aspect of smart city design, ensuring seamless integration and functionality of its components.</p>
+
+        <p>
+            <a href="#" class="cta-button">Learn More</a>
+        </p>
     </div>
 
     <footer>
