--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         .about-button:hover, 
         .about-project-button:hover, 
         .course-reflections-button:hover, 
-        .business-cases-button:hover {
+        .business-cases-button:hover,
+        .implementation-button:hover                             {
             background-color: #6a0dad;
         }
 
@@ -171,6 +172,7 @@
         <button class="about-project-button" onclick="location.href='daa1.html'">About the Project</button>
         <button class="course-reflections-button" onclick="location.href='daa2.html'">Course Reflections</button>
         <button class="business-cases-button" onclick="location.href='daa3.html'">Business Cases</button>
+        <button class="implementation-button" onclick="location.href='daa4.html'">Implementation</button>
 
         <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
     </section>
