--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             text-decoration: underline;
         }
 
-        .about-button, .about-project-button, .course-reflections-button, .business-cases-button {
+        .about-button, .about-project-button, .course-reflections-button, .business-cases-button, .implementation-button {
             display: inline-block;
             margin: 15px 5px;
             padding: 10px 20px;
