--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <dd>01FE23BCS145</dd>
 
             <dt>Course Instructor</dt>
-            <dd>Mrs Arundati</dd>
+            <dd>Ms Arundati Aralimatti</dd>
 
             <dt>University</dt>
             <dd>KLE Technological University</dd>
@@ -174,7 +174,7 @@
         <button class="business-cases-button" onclick="location.href='daa3.html'">Business Cases</button>
         <button class="implementation-button" onclick="location.href='daa4.html'">Implementation</button>
 
-        <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
+        <blockquote>“Technology is best when it brings people together” – Matt Mullenweg</blockquote>
     </section>
 </body>
 </html>
