--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             text-decoration: underline;
         }
 
-        .about-button, .about-project-button, .course-reflections-button, .business-cases-button, .implementation-button {
+        .about-button, .course-reflections-button, .about-project-button, .business-cases-button, .implementation-button {
             display: inline-block;
             margin: 15px 5px;
             padding: 10px 20px;
@@ -106,8 +106,8 @@
         }
 
         .about-button:hover, 
-        .about-project-button:hover, 
         .course-reflections-button:hover, 
+        .about-project-button:hover, 
         .business-cases-button:hover,
         .implementation-button:hover                             {
             background-color: #6a0dad;
@@ -140,8 +140,8 @@
 
         <h2>🌐 Find Me Online</h2>
         <ul>
-            <li><a href="https://github.com/your-github-username" target="_blank">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/bhoomideshpande" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/bhoomi-deshpande-2547a027a/" target="_blank">LinkedIn</a></li>
         </ul>
 
         <h2>Portfolio Topic</h2>
@@ -169,8 +169,8 @@
         </dl>
 
         <button class="about-button" onclick="location.href='jhooti.html'">About Course</button>
-        <button class="about-project-button" onclick="location.href='daa1.html'">About the Project</button>
         <button class="course-reflections-button" onclick="location.href='daa2.html'">Course Reflections</button>
+        <button class="about-project-button" onclick="location.href='daa1.html'">About the Project</button>
         <button class="business-cases-button" onclick="location.href='daa3.html'">Business Cases</button>
         <button class="implementation-button" onclick="location.href='daa4.html'">Implementation</button>
 
